--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     
     <!--Intro Video-->
     <section id="intro">
-        <div class="container-fluid">
+        <div class="container">
             <div class="hero-video-cover" id="Dc5ZRt7n4Rs">
                 <div class="cover-img">
                     <i class="fa fa-play-circle-o fa-4x text-center"></i>
@@ -90,7 +90,7 @@
                         <div class="col">
                             <h3 style="font-weight: 800;">Pity Pattern</h3><br>
                             <h2>Sorry, As Always, For Everything.</h2><br>
-                            <h4><em>Available 1/22/2019</em></h4>
+                            <h4><em>Available Everywhere You Hear Music</em></h4>
                         </div> 
                     </div>
                     <!----<div class="row mx-auto mt-4 rounded">
